security_group.tf
resource "aws_security_group" "demo-sg" {
  name        = "demo-sg"
  description = "Ingress and Egress Rules"
  vpc_id = "${aws_vpc.demo-vpc.id}"

  dynamic "ingress" {
    for_each = var.sg_ingress_ports
    iterator = port
    content {
      from_port   = port.value
      to_port     = port.value
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
  }

  dynamic "egress" {
    for_each = var.sg_egress_ports
    content {
      from_port   = egress.value
      to_port     = egress.value
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
  }

  tags = {
    Name = "Demo SG"
    Environment = terraform.workspace
  }
}
